--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Professional Education Course</title>
     <!-- Bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -17,8 +17,42 @@
 
 </head>
 <body>
-   <header>
+   <header class="container">
+<nav class="navbar navbar-expand-lg bg-light ">
+    <div class="container-fluid   ">
+        <span class="navbar-text  text-dark h2 ">
+            Professional Education
+        </span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse  justify-content-center " id="navbarText">
+            <ul class="navbar-nav ">
+                <li class="nav-item h6 ">
+                    <a class="nav-link active text-dark  " aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item h6">
+                    <a class="nav-link  text-dark" href="#">Courses</a>
+                </li>
+                <li class="nav-item h6">
+                    <a class="nav-link  text-dark" href="#">Deals</a>
+                </li>
 
+                <li class="nav-item h6">
+                    <a class="nav-link  text-dark" href="#">Success</a>
+                </li>
+                <li class="nav-item h6">
+                    <a class="nav-link  text-dark" href="#">About</a>
+                </li>
+                <li class="nav-item h6">
+                    <a class="nav-link  text-dark" href="#">Register</a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+</nav>
 
    </header>
 
