join-section-add

--- a/index.html
+++ b/index.html
@@ -247,7 +247,56 @@ methods to boost the level of education. <br> The complete criteria of education
     </section>
 <!-- popular course end -->
 <!-- join section start -->
+<section>
+    <div class="container bg-primary mt-5 p-5">
+        <div class="row ">
+            <div class="col-lg-6 col-md-6 col-12">
 
+                <h1 class="p-3 text-white fw-bold">Ready to join?</h1>
+                <p class="text-white">A reliable education provides many purposes to life like an individual
+                    improvement, increase of social situation,
+                    development in social well-being, financial growth, prosperity to the country, establishing life
+                    purposes, informing us
+                    of many social concerns, and determining the circumstances to offer .</p>
+
+
+
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-12 d-flex align-items-center justify-content-end">
+
+
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-light text-primary fw-bold  " data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Register Now
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Enroll</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body fw-bold">
+                                Are you sure to enroll in the course?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- join section end -->
 
 
 
