--- a/index.html
+++ b/index.html
@@ -444,21 +444,29 @@ methods to boost the level of education. <br> The complete criteria of education
 
    </main>
    <!-- Footer Start -->
-   <footer>
+   <footer class="mt-5 bg-dark p-4">
+
+    <div class="container ">
+        <h1 class="text-white text-center">Professional Education
+           </h1>
+           <p class="text-white text-center fw-bold"> office 41, Zawaya Buildin, Ghala Muscat, <br> Sultanate of oman</p>
+           <h6 class="text-center">Privacy Policy | Terms of use</h6>
+       
 
 
+<div class="social-icons d-flex justify-content-center m-5">
+    <a class="mx-3 fs-1 text text-white" href="https://www.facebook.com/" target="_blank">
+        <i class="fa-brands fa-facebook"></i>
+    </a>
+    <a class="mx-3 fs-1 text text-white" href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter"></i>
+    </a>
+    <a class="mx-3 fs-1 text text-white" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>
+    </a>
+</div>
 
-    <div class="social-icons">
-        <a href="https://www.facebook.com/" target="_blank">
-            <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i>
-        </a>
-    
-    </div>
-   </footer>
+</div>
+</footer>
+<!-- footer section end -->
     <script src="  https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
