--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ problems of illiteracy and inequality among every one of various castes, religio
     </div>
     <div class="mx-2">
         <h5 class="card-title fw-bold">Shanta Akter</h5>
-        <p>Graohic Design</p>
+        <p>Graphic Design</p>
     </div>
 </div>
 </div>
